--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
 
         <!--
-        <h2> <a href="https://mwoolweaver.github.io/Blog/"> My Opinions </a> </h2>
+        <h2> <a href="https://mwoolweaver.github.io/Blog/" style="text-decoration: none"> My Opinions </a> </h2>
         -->
 
-        <h2> <a href="https://mwoolweaver.us/CydiaRepos.html" style="text-decoration: none"> Cydia Repos </a> </h2>
+        <h2> <a href="https://mwoolweaver.us/CydiaRepos" style="text-decoration: none"> Cydia Repos </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
