--- a/CydiaRepos.html
+++ b/CydiaRepos.html
@@ -10,10 +10,10 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/fonts/fonts.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./css/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./css/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="./css/fonts.css"/>
 
     <title> A Collection of Things</title>
   </head>
