--- a/Anemone-Fonts/desktop.html
+++ b/Anemone-Fonts/desktop.html
@@ -9,10 +9,10 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="https://anemone-fonts.us/css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="https://anemone-fonts.us/css/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="https://anemone-fonts.us/css/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="https://anemone-fonts.us/css/fonts.css"/>
+    <link rel="stylesheet" type="text/css" href="././css/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="././css/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="././css/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="././css/fonts.css"/>
 
     <title>301 Moved Permanently</title>
   </head>
