--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -3,7 +3,7 @@
     <head>
        <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
        <script type="text/javascript">
-            <!-- check for desktop and deal accordingly -->
+            // check for desktop and deal accordingly 
             if (WURFL.is_mobile == false && WURFL.is_ios == false) {
             document.location = "./desktop.html";
             }
