--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
     <head>
        <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
-       <script type="text/javascript">
-            // check for desktop and deal accordingly 
-            if (WURFL.is_mobile == false && WURFL.is_ios == false) {
-            document.location = "./desktop.html";
-            }
-            else {
-                document.location = "./cydia.html";
-            }
-        </script>
     </head>
+    <body>
+      <script type="text/javascript">
+           if (WURFL.is_mobile === false || WURFL.is_ios === false){
+           document.location = "./desktop.html";
+           }
+           else {
+               document.location = "./cydia.html";
+           }
+     </script>
+
+    </body>
 </html>
