maybe it looks right now

--- a/Anemone-Fonts/cydia.html
+++ b/Anemone-Fonts/cydia.html
@@ -7,10 +7,10 @@
     }
     </style>
         <title>301 Moved Permanently</title>
-        <link rel="stylesheet" type="text/css" href="././css/cydia.css"/>
-        <link rel="stylesheet" type="text/css" href="././css/fonts.css"/>
+        <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/cydia.css"/>
+        <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css"/>
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <script type="text/javascript" src="././js/cydia.js"></script>
+        <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
     </head>
     <body class="pinstripe">
       <panel>
@@ -34,7 +34,7 @@
         <label>Links</label>
           <fieldset>
             <a href="https://twitter.com/AnemoneFonts">
-              <img class="icon" src="././img/twitter.png" width="58" height="58">
+              <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
               <div><div><label><p>
                     @AnemoneFonts on Twitter
               </p></label></div></div>
