looks moar better

--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -17,12 +17,14 @@
     <title> A Collection of Things</title>
   </head>
 
-  <body>
-
+<body>
+  <br>
   <a href="./iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
-
+  <br>
   <a href="./High_Sierra_Beta_Access_Utility.dmg" style="text-decoration: none"> High_Sierra_Beta_Access_Utility.dmg </a>
-
+  <br>
   <a href="./XFINITY.mobileconfig" style="text-decoration: none"> XFINITY.mobileconfig </a>
-
+  <br>
   <a href="./lib.zip" style="text-decoration: none"> lib.zip </a>
+  <br>
+</body>
