--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -8,13 +8,9 @@
   </style>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="./css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="./css/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="./css/print.css" media="print">
     <link rel="stylesheet" type="text/css" href="./css/fonts.css"/>
 
-    <title> A Collection of Things</title>
+    <title> stuuf </title>
   </head>
 
 <body>
