--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -8,7 +8,11 @@
   </style>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" type="text/css" href="./css/fonts.css"/>
+
+    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css"/>
 
     <title> stuuf </title>
   </head>
