center everything on the page

--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -18,6 +18,7 @@
   </head>
 
 <body>
+  <center>
   <br>
   <a href="./iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
   <br>
@@ -30,5 +31,6 @@
   <br>
   <a href="./lib.zip" style="text-decoration: none"> lib.zip </a>
   <br>
+</center>
 </body>
 </html>
