--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
-        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+        <h3> <a href="https://Anemone-Fonts.us" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
         <h3> <a href="https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> Public Repo </a> (⌐■_■)  </h3>
 
