--- a/CydiaRepos.html
+++ b/CydiaRepos.html
@@ -29,11 +29,11 @@
           <hr>
         </div>
 
-        <h2> <a href="https://mwoolweaver.us/CydiaRepos" style="text-decoration: none"> Cydia Repos </a> </h2>
+        <h2> <a href="./CydiaRepos" style="text-decoration: none"> Cydia Repos </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
-        <h3> <a href="https://mwoolweaver.us/Anemone-Fonts/" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+        <h3> <a href="https://Anemone-Fonts.us" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
         <h3> <a href="https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> Public Repo </a> (⌐■_■)  </h3>
         <div id="title">
