--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2> <a href="https://mwoolweaver.github.io/Blog/" style="text-decoration: none"> My Opinions </a> </h2>
         -->
 
-        <h2> <a href="https://mwoolweaver.us/CydiaRepos" style="text-decoration: none"> Cydia Repos </a> </h2>
+        <h2> <a href="./CydiaRepos" style="text-decoration: none"> Cydia Repos </a> </h2>
 
         <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
