--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -19,6 +19,8 @@
 
 <body>
   <center>
+  <a href="./iOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_10_Beta_Profile.mobileconfig </a>  
+  <br>
   <br>
   <a href="./iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
   <br>
