--- a/Anemone-Fonts/cydia.html
+++ b/Anemone-Fonts/cydia.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <style>
+
+<head>
+  <style>
     body {
       font-family: 'BeatsByDre';
     }
-    </style>
-        <title>301 Moved Permanently</title>
-        <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/cydia.css"/>
-        <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css"/>
-        <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
-    </head>
-    <body class="pinstripe">
-      <panel>
-        <label>301 Moved Permanently</label>
-        <fieldset>
-          <div><p>
-            Anemone Fonts ⌐■_■
-            <br><br>
-            301 Moved Permanently
-            <br><br>
-            Location: <a href="https://anemone-fonts.us/" style="text-decoration: none"> https://anemone-fonts.us/ </a>
-            <br><br>
-            The Anemone Fonts repo has moved to https://anemone-fonts.us/
-            <br><br>
-            Tap below to add to Cydia
-            <br><br>
-            <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.us/" style="text-decoration: none">Add to Cydia </a>
-          </p></div>
-        </fieldset>
+  </style>
+  <title>301 Moved Permanently</title>
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/cydia.css" />
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
+</head>
 
-        <label>Links</label>
-          <fieldset>
-            <a href="https://twitter.com/AnemoneFonts">
+<body class="pinstripe">
+  <panel>
+    <label>301 Moved Permanently</label>
+    <fieldset>
+      <div>
+        <p>
+          Anemone Fonts ⌐■_■
+          <br><br> 301 Moved Permanently
+          <br><br> Location: <a href="https://anemone-fonts.us/" style="text-decoration: none"> https://anemone-fonts.us/ </a>
+          <br><br> The Anemone Fonts repo has moved to https://anemone-fonts.us/
+          <br><br> Tap below to add to Cydia
+          <br><br>
+          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.us/" style="text-decoration: none">Add to Cydia </a>
+        </p>
+      </div>
+    </fieldset>
+
+    <label>Links</label>
+    <fieldset>
+      <a href="https://twitter.com/AnemoneFonts">
               <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
               <div><div><label><p>
                     @AnemoneFonts on Twitter
               </p></label></div></div>
             </a>
-          </fieldset>
-      </panel>
-    </body>
+    </fieldset>
+  </panel>
+</body>
+
 </html>
