--- a/Public-Repo/index.html
+++ b/Public-Repo/index.html
@@ -1,45 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  <style>
-  body {
-    font-family: 'BeatsByDre';
-  }
-  </style>
+<html lang="en">
+    <head>
+      <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
+      <script>
+      function iOS() {
 
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+        var iDevices = [
+          'iPad Simulator',
+          'iPhone Simulator',
+          'iPod Simulator',
+          'iPad',
+          'iPhone',
+          'iPod'
+        ];
 
-    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css"/>
-
-    <title> Michael's Public Repository </title>
-  </head>
-
-  <body>
-    <div class="container">
-      <section id="main_content">
-
-       <h3> Michael's <a href="https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> Public Repo </a> </h3>
-        <div id="title">
-          <span class="credits center"> by <a href="https://github.com/mwoolweaver" style="text-decoration: none"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/" style="text-decoration: none"> mwoolweaver.us </a> </span>
-          <hr>
-        </div>
-        <h3> Public Repo </h3>
-
-        <h2> Tap <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> here</a> to add to Cydia. (⌐■_■) </h2>
-
-        <div id="title">
-          <hr>
-          <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/" style="text-decoration: none">/u/mwoolweaver</a> </span>
-
-          <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver" style="text-decoration: none">@mwoolweaver</a> </span>
-        </div>
-
-      </section>
-    </div>
-  </body>
-
+        if (!!navigator.platform) {
+          while (iDevices.length) {
+            if (navigator.platform === iDevices.pop()){ return true; }
+          }
+        }
+        return false;
+      }
+      </script>
+    </head>
+    <body>
+      <script>
+      if (WURFL.is_mobile === true) {
+        if (iOS() === true) {
+          document.location = "./cydia.html";
+        }
+        else { document.location = "./desktop.html"; }
+        }
+        else { document.location = "./desktop.html"; }
+      </script>
+    </body>
 </html>
