--- a/Public-Repo/desktop.html
+++ b/Public-Repo/desktop.html
@@ -28,7 +28,7 @@
           <hr>
         </div>
 
-        <h2> <a href="https://mwoolweaver.us/" style="text-decoration: none"> Michael's Public Repository </a> (•_•) </h2>
+        <h2> <a href="https://mwoolweaver.us/Public-Repo/" style="text-decoration: none"> Michael's Public Repository </a> (•_•) </h2>
 
         <h2> ( •_•)>⌐■-■ </h2>
 
