--- a/Public-Repo/desktop.html
+++ b/Public-Repo/desktop.html
@@ -24,7 +24,7 @@
 
         <div id="title">
 
-          <span class="credits center"> GitHub <a href="https://github.com/mwoolweaver" style="text-decoration: none"> Michael's Public Repository </a> </span>
+          <span class="credits center"> GitHub <a href="https://github.com/mwoolweaver" style="text-decoration: none">mwoolweaver </a> </span>
           <hr>
         </div>
 
