missed some other stuuf

--- a/Public-Repo/cydia.html
+++ b/Public-Repo/cydia.html
@@ -21,15 +21,15 @@
             <br><br>
 
             <br><br>
-            Location: <a href="https://mwoolweaver.us/" style="text-decoration: none"> https://mwoolweaver.us/</a>
+            Location: <a href="https://mwoolweaver.us/Public-Repo/" style="text-decoration: none"> https://mwoolweaver.us/Public-Repo/</a>
             <br><br>
 
             <br><br>
-            Tap below to add https://mwoolweaver.us/ to Cydia
+            Tap below to add https://mwoolweaver.us/Public-Repo/ to Cydia
             <br><br>
 
             <br><br>
-            <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.us/" style="text-decoration: none">Add to Cydia </a>
+            <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.us/Public-Repo/" style="text-decoration: none">Add to Cydia </a>
           </p></div>
         </fieldset>
 
