--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-       <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
+      <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
+      <script>
+      function iOS() {
+
+        var iDevices = [
+          'iPad Simulator',
+          'iPhone Simulator',
+          'iPod Simulator',
+          'iPad',
+          'iPhone',
+          'iPod'
+        ];
+
+        if (!!navigator.platform) {
+          while (iDevices.length) {
+            if (navigator.platform === iDevices.pop()){ return true; }
+          }
+        }
+        return false;
+      }
+      </script>
     </head>
     <body>
-      <script type="text/javascript">
-           if (WURFL.is_mobile === false || WURFL.is_ios === false){
-           document.location = "./desktop.html";
-           }
-           else {
-               document.location = "./cydia.html";
-           }
-     </script>
-
+      <script>
+      if (WURFL.is_mobile === true) {
+        if (iOS() === true) {
+          document.location = "./cydia.html";
+        }
+        else { document.location = "./desktop.html"; }
+        }
+        else { document.location = "./desktop.html"; }
+      </script>
     </body>
 </html>
