--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
-      <script>
-      function iOS() {
 
-        var iDevices = [
-          'iPad Simulator',
-          'iPhone Simulator',
-          'iPod Simulator',
-          'iPad',
-          'iPhone',
-          'iPod'
-        ];
+<head>
+  <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
+  <script>
+    function iOS() {
 
-        if (!!navigator.platform) {
-          while (iDevices.length) {
-            if (navigator.platform === iDevices.pop()){ return true; }
+      var iDevices = [
+        'iPad Simulator',
+        'iPhone Simulator',
+        'iPod Simulator',
+        'iPad',
+        'iPhone',
+        'iPod'
+      ];
+
+      if (!!navigator.platform) {
+        while (iDevices.length) {
+          if (navigator.platform === iDevices.pop()) {
+            return true;
           }
         }
-        return false;
       }
-      </script>
-    </head>
-    <body>
-      <script>
-      if (WURFL.is_mobile === true) {
-        if (iOS() === true) {
-          document.location = "./cydia.html";
-        }
-        else { document.location = "./desktop.html"; }
-        }
-        else { document.location = "./desktop.html"; }
-      </script>
-    </body>
+      return false;
+    }
+  </script>
+</head>
+
+<body>
+  <script>
+    if (WURFL.is_mobile === true) {
+      if (iOS() === true) {
+        document.location = "./cydia.html";
+      } else {
+        document.location = "./desktop.html";
+      }
+    } else {
+      document.location = "./desktop.html";
+    }
+  </script>
+</body>
+
 </html>
