--- a/Public-Repo/cydia.html
+++ b/Public-Repo/cydia.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <style>
+
+<head>
+  <style>
     body {
       font-family: 'BeatsByDre';
     }
-    </style>
-        <title> Michael's Public Repository </title>
-        <link rel="stylesheet" type="text/css" href="./css/cydia.css"/>
-        <link rel="stylesheet" type="text/css" href="./css/fonts.css"/>
-        <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <script type="text/javascript" src="./js/cydia.js"></script>
-    </head>
-    <body class="pinstripe">
-      <panel>
-        <label> Michael's Public Repository </label>
-        <fieldset>
-          <div><p>
-            Michael's Public Repository ⌐■_■
-            <br><br>
+  </style>
+  <title> Michael's Public Repository </title>
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/cydia.css" />
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
+</head>
 
-            <br><br>
-            Location: <a href="https://mwoolweaver.us/Public-Repo/" style="text-decoration: none"> https://mwoolweaver.us/Public-Repo/</a>
-            <br><br>
+<body class="pinstripe">
+  <panel>
+    <label> Michael's Public Repository </label>
+    <fieldset>
+      <div>
+        <p>
+          Michael's Public Repository ⌐■_■
+          <br><br>
 
-            <br><br>
-            Tap below to add https://mwoolweaver.us/Public-Repo/ to Cydia
-            <br><br>
+          <br><br> Location: <a href="https://mwoolweaver.us/Public-Repo/" style="text-decoration: none"> https://mwoolweaver.us/Public-Repo/</a>
+          <br><br>
 
-            <br><br>
-            <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.us/Public-Repo/" style="text-decoration: none">Add to Cydia </a>
-          </p></div>
-        </fieldset>
+          <br><br> Tap below to add https://mwoolweaver.us/Public-Repo/ to Cydia
+          <br><br>
 
-        <label>Links</label>
-          <fieldset>
-            <a href="https://twitter.com/mwoolweaver">
+          <br><br>
+          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.us/Public-Repo/" style="text-decoration: none">Add to Cydia </a>
+        </p>
+      </div>
+    </fieldset>
+
+    <label>Links</label>
+    <fieldset>
+      <a href="https://twitter.com/mwoolweaver">
               <img class="icon" src="./img/twitter.png" width="58" height="58">
               <div><div><label><p>
                     @mwoolweaver on Twitter
               </p></label></div></div>
             </a>
-          </fieldset>
-      </panel>
-    </body>
+    </fieldset>
+  </panel>
+</body>
+
 </html>
