--- a/index.html
+++ b/index.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
   <style>
-  body {
-    font-family: 'BeatsByDre';
-  }
+    body {
+      font-family: 'BeatsByDre';
+    }
   </style>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta charset='utf-8'>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="./css/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="./css/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="./css/print.css" media="print">
-    <link rel="stylesheet" type="text/css" href="./css/fonts.css"/>
+  <link rel="stylesheet" type="text/css" href="./css/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="./css/github-dark.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="./css/print.css" media="print">
+  <link rel="stylesheet" type="text/css" href="./css/fonts.css" />
 
-    <title> A Collection of Things</title>
-  </head>
+  <title> A Collection of Things</title>
+</head>
 
-  <body>
-    <div class="container">
-      <section id="main_content">
-        <h2> A Collection of Things </h2>
+<body>
+  <div class="container">
+    <section id="main_content">
+      <h2> A Collection of Things </h2>
 
-        <div id="title">
+      <div id="title">
 
-          <span class="credits center"> by <a href="https://github.com/mwoolweaver" style="text-decoration: none"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/" style="text-decoration: none"> mwoolweaver.us </a> </span>
-          <hr>
-        </div>
+        <span class="credits center"> by <a href="https://github.com/mwoolweaver" style="text-decoration: none"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/" style="text-decoration: none"> mwoolweaver.us </a> </span>
+        <hr>
+      </div>
 
-        <!--
+      <!--
         <h2> <a href="https://mwoolweaver.github.io/Blog/" style="text-decoration: none"> My Opinions </a> </h2>
         -->
 
-        <h2> <a href="http://iphonedevwiki.net/index.php/Cydia" style="text-decoration: none"> Cydia </a>Repos </h2>
+      <h2> <a href="https://cydia.saurik.com/" style="text-decoration: none"> Cydia </a>Repos </h2>
 
-        <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
+      <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
 
-        <h3> <a href="https://Anemone-Fonts.us" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
+      <h3> <a href="https://Anemone-Fonts.us" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
 
-        <h3> <a href="https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> Public Repo </a> (⌐■_■)  </h3>
+      <h3> <a href="https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> Public Repo </a> (⌐■_■)  </h3>
 
+      <hr>
+
+      <h2> <a href="https://ioshackerwiki.com/" style="text-decoration: none"> iOS Kernel Stuff </a> </h2>
+
+      <h3> ▨-▨¬ლ(•_•) (▨_▨¬) </h3>
+
+      <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" style="text-decoration: none"> Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
+
+      <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" style="text-decoration: none"> Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
+
+      <div id="title">
         <hr>
+        <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/" style="text-decoration: none">/u/mwoolweaver</a> </span>
 
-        <h2> <a href="https://ioshackerwiki.com/" style="text-decoration: none"> iOS Kernel Stuff </a> </h2>
+        <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver" style="text-decoration: none">@mwoolweaver</a> </span>
+      </div>
 
-        <h3> ▨-▨¬ლ(•_•) (▨_▨¬) </h3>
-
-        <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" style="text-decoration: none"> Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
-
-        <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" style="text-decoration: none"> Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
-
-        <div id="title">
-          <hr>
-          <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/" style="text-decoration: none">/u/mwoolweaver</a> </span>
-
-          <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver" style="text-decoration: none">@mwoolweaver</a> </span>
-        </div>
-
-      </section>
-    </div>
-  </body>
+    </section>
+  </div>
+</body>
 
 </html>
