--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -20,18 +20,47 @@
 
 <body>
   <center>
+
+    <h3> iOS </h3>
+
+    <a href="./iOS/iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
     <br>
-    <a href="./iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
+    <a href="./iOS/iOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_10_Beta_Profile.mobileconfig </a>
+
     <br>
     <br>
-    <a href="./High_Sierra_Beta_Access_Utility.dmg" style="text-decoration: none"> High_Sierra_Beta_Access_Utility.dmg </a>
+    <br>
+
+    <h3> macOS </h3>
+
+    <a href="./macOS/macOS_High_Sierra_Developer_Beta_Access_Utility.dmg" style="text-decoration: none"> macOS_High_Sierra_Beta_Access_Utility.dmg </a>
+    <br>
+    <a href="./macOS/macOS_Sierra_Developer_Beta_Access_Utility.dmg" style="text-decoration: none"> macOS_Sierra_Beta_Access_Utility.dmg </a>
+
     <br>
     <br>
-    <a href="./XFINITY.mobileconfig" style="text-decoration: none"> XFINITY.mobileconfig </a>
+    <br>
+
+    <h3> watchOS </h3>
+
+    <a href="./watchOS/watchOS_4_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_4_Beta_Profile.mobileconfig </a>
+    <br>
+    <a href="./watchOS/watchOS_3_Beta_Configuration_Profile.mobileconfig" style="text-decoration: none"> watchOS_3_Beta_Configuration_Profile.mobileconfig </a>
+
     <br>
     <br>
-    <a href="./lib.zip" style="text-decoration: none"> lib.zip </a>
     <br>
+
+    <h3> tvOS </h3>
+
+    <a href="./tvOS/tvOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_11_Beta_Profile.mobileconfig </a>
+    <br>
+    <a href="./tvOS/tvOS_10_Beta_Configuration_Profile.mobileconfig" style="text-decoration: none"> tvOS_10_Beta_Configuration_Profile.mobileconfig </a>
+
+    <br>
+    <br>
+    <br>
+
   </center>
 </body>
 
