--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -45,7 +45,7 @@
 
     <a href="./watchOS/watchOS_4_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_4_Beta_Profile.mobileconfig </a>
     <br>
-    <a href="./watchOS/watchOS_3_Beta_Configuration_Profile.mobileconfig" style="text-decoration: none"> watchOS_3_Beta_Configuration_Profile.mobileconfig </a>
+    <a href="./watchOS/watchOS_3_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_3_Beta_Profile.mobileconfig </a>
 
     <br>
     <br>
@@ -55,7 +55,7 @@
 
     <a href="./tvOS/tvOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_11_Beta_Profile.mobileconfig </a>
     <br>
-    <a href="./tvOS/tvOS_10_Beta_Configuration_Profile.mobileconfig" style="text-decoration: none"> tvOS_10_Beta_Configuration_Profile.mobileconfig </a>
+    <a href="./tvOS/tvOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_10_Beta_Profile.mobileconfig </a>
 
     <br>
     <br>
