what's this look like on mobile

--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -21,7 +21,7 @@
 <body>
   <center>
     <hr>
-
+    <span style="float:left;">
     <h3> iOS </h3>
 
     <a href="./iOS/iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
@@ -43,7 +43,9 @@
 
     <hr>
     <br>
+  </span>
 
+    <span style="float:right;">
     <h3> watchOS </h3>
 
     <a href="./watchOS/watchOS_4_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_4_Beta_Profile.mobileconfig </a>
@@ -64,6 +66,7 @@
     <ul> SHA-256 - cf49ef3791e4153badfbf38223329736eb050a2dbb9d1a3c797cff4a456b182c </ul>
 
     <hr>
+  </span>
 
   </center>
 </body>
