--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -4,7 +4,7 @@
 <head>
   <style>
     body {
-      font-family: 'BeatsByDre';
+      font-family: 'AvenirNext';
     }
   </style>
   <meta charset='utf-8'>
