--- a/stuuf/beta.html
+++ b/stuuf/beta.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/print.css" media="print">
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
 
-  <title> stuuf </title>
+  <title> Beta </title>
 </head>
 
 <body>
