--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <h2> <a href="https://mwoolweaver.github.io/Blog/" style="text-decoration: none"> My Opinions </a> </h2>
         -->
 
+      <h2> <a href="https://mwoolweaver.us/stuuf/beta" style="text-decoration: none"> Apple Betas </a> ╭∩╮(-_-)╭∩╮ </h2>
+
+      <hr>
+      	
       <h2> <a href="https://cydia.saurik.com/" style="text-decoration: none"> Cydia </a>Repos </h2>
 
       <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
