betterness all around

--- a/stuuf/beta.html
+++ b/stuuf/beta.html
@@ -23,14 +23,12 @@
   <center>
     <h2> beta </h2>
 
-    <span style="float:left;">
+    <span style="float:left;text-align: center;">
           <h3> iOS </h3>
 
             <a href="./iOS/iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
-            <ul> SHA-256 - 785c0e70e47b29a68f985754dbfce5a51b010dcb07b2616f397964a96bbb94cb </ul>
             <br>
             <a href="./iOS/iOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_10_Beta_Profile.mobileconfig </a>
-            <ul> SHA-256 - f53f1a9eda0e981af0b77375d396dff384d660431749fb30f86c6fefaa811c61 </ul>
 
             <br>
             <br>
@@ -38,10 +36,8 @@
             <h3> macOS </h3>
 
             <a href="./macOS/macOS_High_Sierra_Developer_Beta_Access_Utility.dmg" style="text-decoration: none"> macOS_High_Sierra_Beta_Access_Utility.dmg </a>
-            <ul> SHA-256 - 505c598caddf752edb34f2819f904c9080c0eaeb2f87b1e9da12eebb44fdb722 </ul>
             <br>
             <a href="./macOS/macOS_Sierra_Developer_Beta_Access_Utility.dmg" style="text-decoration: none"> macOS_Sierra_Beta_Access_Utility.dmg </a>
-            <ul> SHA-256 - 753ebd5e34b5d7b1766245422c34e3a677872786541065a55240fb5bfa3d685d </ul>
 
             <br>
             <br>
@@ -51,10 +47,8 @@
               <h3> watchOS </h3>
 
               <a href="./watchOS/watchOS_4_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_4_Beta_Profile.mobileconfig </a>
-              <ul> SHA-256 - 02f927469f290fde879ab9dbc7caf58a188e620b8bab19c9870a823480b493de </ul>
               <br>
               <a href="./watchOS/watchOS_3_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_3_Beta_Profile.mobileconfig </a>
-              <ul> SHA-256 - 7177388f73686006dd8bb002290354982f2c75c3ddbb67924731a2b7476d576f </ul>
 
               <br>
               <br>
@@ -62,10 +56,8 @@
               <h3> tvOS </h3>
 
               <a href="./tvOS/tvOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_11_Beta_Profile.mobileconfig </a>
-              <ul> SHA-256 - 73b3060ec6c373bd4e53cbd77cc711e73e47a8d52c21c65aaa7f9ab7ef95b7ca </ul>
               <br>
               <a href="./tvOS/tvOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_10_Beta_Profile.mobileconfig </a>
-              <ul> SHA-256 - cf49ef3791e4153badfbf38223329736eb050a2dbb9d1a3c797cff4a456b182c </ul>
 
               <br>
             </span>
