--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
         <hr>
       </div>
 
-      <!--
-        <h2> <a href="https://mwoolweaver.github.io/Blog/" style="text-decoration: none"> My Opinions </a> </h2>
-        -->
+      <!--  <h2> <a href="https://mwoolweaver.us/Blog/" style="text-decoration: none"> My Opinions Are My Own </a> </h2>  -->
 
       <h2> <a href="https://cydia.saurik.com/" style="text-decoration: none"> Cydia </a>Repos </h2>
 
