--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 
-
+ beta stuuf is <a href="https://mwoolweaver.us/stuuf/beta" style="text-decoration: none"> here </a>
 </html>
