--- a/stuuf/-dev-beta.html
+++ b/stuuf/-dev-beta.html
@@ -16,14 +16,13 @@
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
 
 
-  <title> beta </title>
+  <title>  dev beta </title>
 </head>
 
 <body>
   <center>
     <h2> beta </h2>
 
-    <span style="float:left;text-align: center;">
           <h3> iOS </h3>
 
             <a href="./iOS/iOS_11_Beta_Profile.mobileconfig" style="text-decoration: none"> iOS_11_Beta_Profile.mobileconfig </a>
@@ -41,9 +40,7 @@
 
             <br>
             <br>
-          </span>
 
-    <span style="float:right;">
               <h3> watchOS </h3>
 
               <a href="./watchOS/watchOS_4_Beta_Profile.mobileconfig" style="text-decoration: none"> watchOS_4_Beta_Profile.mobileconfig </a>
@@ -60,7 +57,6 @@
               <a href="./tvOS/tvOS_10_Beta_Profile.mobileconfig" style="text-decoration: none"> tvOS_10_Beta_Profile.mobileconfig </a>
 
               <br>
-            </span>
   </center>
 </body>
 
