--- a/index.html
+++ b/index.html
@@ -1,67 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <style>
-    body {
-      font-family: 'BeatsByDre';
+  <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
+  <script>
+    function iOS() {
+
+      var iDevices = [
+        'iPad Simulator',
+        'iPhone Simulator',
+        'iPod Simulator',
+        'iPad',
+        'iPhone',
+        'iPod'
+      ];
+
+      if (!!navigator.platform) {
+        while (iDevices.length) {
+          if (navigator.platform === iDevices.pop()) {
+            return true;
+          }
+        }
+      }
+      return false;
     }
-  </style>
-  <meta charset='utf-8'>
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-  <link rel="stylesheet" type="text/css" href="./css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="./css/github-dark.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="./css/print.css" media="print">
-  <link rel="stylesheet" type="text/css" href="./css/fonts.css" />
-
-  <title> A Collection of Things</title>
+  </script>
 </head>
 
 <body>
-  <div class="container">
-    <section id="main_content">
-      <h2> A Collection of Things </h2>
-
-      <div id="title">
-
-        <span class="credits center"> by <a href="https://github.com/mwoolweaver" style="text-decoration: none"> mwoolweaver </a> @ <a href="https://mwoolweaver.us/" style="text-decoration: none"> mwoolweaver.us </a> </span>
-        <hr>
-      </div>
-
-      <!--  <h2> <a href="https://mwoolweaver.us/Blog/" style="text-decoration: none"> My Opinions Are My Own </a> </h2>  -->
-
-      <h2> <a href="https://cydia.saurik.com/" style="text-decoration: none"> Cydia </a>Repos </h2>
-
-      <h3> (•_•) ( •_•)>⌐■-■ (⌐■_■) </h3>
-
-      <h3> <a href="https://Anemone-Fonts.us" style="text-decoration: none"> Anemone Fonts </a> ( ◕ ◡ ◕ ) </h3>
-
-      <h3> <a href="https://mwoolweaver.us/Public-Repo" style="text-decoration: none"> Public Repo </a> (⌐■_■)  </h3>
-
-      <hr>
-
-      <h2> <a href="https://ioshackerwiki.com/" style="text-decoration: none"> iOS Kernel Stuff </a> </h2>
-
-      <h3> ▨-▨¬ლ(•_•) (▨_▨¬) </h3>
-
-      <h3> <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" style="text-decoration: none"> Decrypted iOS 10 Kernels </a> ಠ_ಠ </h3>
-
-      <h3> <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" style="text-decoration: none"> Disassembled iOS 10 Kernels </a> ಠ‿ಠ </h3>
-
-      <hr>
-
-      <h2> <a href="https://mwoolweaver.us/stuuf/beta" style="text-decoration: none"> Apple Betas </a> ╭∩╮(-_-)╭∩╮ </h2>
-
-      <div id="title">
-        <hr>
-        <span class="credits right"> Reddit <br> <a href="https://www.reddit.com/user/mwoolweaver/" style="text-decoration: none">/u/mwoolweaver</a> </span>
-
-        <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver" style="text-decoration: none">@mwoolweaver</a> </span>
-      </div>
-
-    </section>
-  </div>
+  <script>
+    if (WURFL.is_mobile === true) {
+      if (iOS() === true) {
+        document.location = "./cydia.html";
+      } else {
+        document.location = "./desktop.html";
+      }
+    } else {
+      document.location = "./desktop.html";
+    }
+  </script>
 </body>
 
 </html>
