--- a/cydia.html
+++ b/cydia.html
@@ -22,9 +22,9 @@
         <p>
           Cydia Repos ⌐■_■
           <br><br>
-          Tap to add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.us/Public-Repo/" style="text-decoration: none">https://mwoolweaver.us/Public-Repo/</a> to Cydia
+          Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.us/Public-Repo/" style="text-decoration: none">https://mwoolweaver.us/Public-Repo/</a> to Cydia
           <br><br>
-          Tap to add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Anemone-Fonts.us/" style="text-decoration: none">https://Anemone-Fonts.us/</a> to Cydia
+          Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Anemone-Fonts.us/" style="text-decoration: none">https://Anemone-Fonts.us/</a> to Cydia
         </p>
       </div>
     </fieldset>
@@ -36,7 +36,7 @@
           <br><br>
           <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" style="text-decoration: none"> Decrypted iOS 10 Kernels </a>
           <br><br>
-          <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" style="text-decoration: none"> Disassembled iOS 10 Kernels</a>
+          <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" style="text-decoration: none"> Disassembled iOS 10 Kernels </a>
         </p>
       </div>
     </fieldset>
@@ -45,7 +45,6 @@
       <div>
         <p>
           Beta Stuuf <a href="./stuuf/index.html" style="text-decoration: none"> ⌐■_■ </a>
-
           <br><br>
           <a href="https://mwoolweaver.us/stuuf/-dev-beta" style="text-decoration: none">  Dev Betas </a>
         </p>
