--- a/404/desktop-404.html
+++ b/404/desktop-404.html
@@ -15,13 +15,13 @@
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/print.css" media="print">
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
 
-  <title>301 Moved Permanently</title>
+  <title> 404 Not Found </title>
 </head>
 
 <body>
   <div class="container">
     <section id="main_content">
-      <h1>301 Moved Permanently</h1>
+      <h1> 404 Not Found </h1>
 
       <div id="title">
 
@@ -29,9 +29,18 @@
         <hr>
       </div>
 
-      <h3>301 Moved Permanently</h3>
+      <h3> 404 Not Found </h3>
 
-      <h4>Location: <a href="https://anemone-fonts.us/" style="text-decoration: none"> https://anemone-fonts.us/</h4>
+      The page you are looking for doesn't exist.
+
+
+      <hr>
+
+      <h3> Where did Anemone-Fonts go? </h3>
+
+      If you are looking for The Anemone-Fonts repo it has been moved.
+
+      Location: <a href="https://anemone-fonts.us/" style="text-decoration: none"> https://anemone-fonts.us/ 
 
       <div id="title">
         <hr>
