--- a/404/desktop.html
+++ b/404/desktop.html
@@ -25,7 +25,7 @@
 
       <div id="title">
 
-        <span class="credits center"> GitHub <a href="https://github.com/Anemone-Fonts" style="text-decoration: none"> Anemone Fonts </a> </span>
+        <span class="credits center"> GitHub <a href="https://github.com/mwoolweaver" style="text-decoration: none"> @mwoolweaver </a> </span>
         <hr>
       </div>
 
@@ -39,12 +39,12 @@
       <h3> Where did Anemone-Fonts go? </h3>
 
       If you are looking for The Anemone-Fonts repo it has been moved.
-
-      Location: <a href="https://anemone-fonts.us/" style="text-decoration: none"> https://anemone-fonts.us/ 
+      <br>
+      Location: <a href="https://anemone-fonts.us/" style="text-decoration: none"> https://anemone-fonts.us/
 
       <div id="title">
         <hr>
-        <span class="credits left"> Twitter <br> <a href="https://twitter.com/AnemoneFonts" style="text-decoration: none"> <br>@Anemone-Fonts</a> </span>
+        <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver" style="text-decoration: none"> <br>@mwoolweaver</a> </span>
       </div>
 
     </section>
