--- a/404.html
+++ b/404.html
@@ -31,12 +31,12 @@
   <script>
     if (WURFL.is_mobile === true) {
       if (iOS() === true) {
-        document.location = "./404/cydia-404.html";
+        document.location = "./404/cydia.html";
       } else {
-        document.location = "./404/desktop-404.html";
+        document.location = "./404/desktop.html";
       }
     } else {
-      document.location = "./404/desktop-404.html";
+      document.location = "./404/desktop.html";
     }
   </script>
 </body>
