gotta do it this way...

--- a/Anemone-Fonts/index.html
+++ b/Anemone-Fonts/index.html
@@ -31,12 +31,12 @@
   <script>
     if (WURFL.is_mobile === true) {
       if (iOS() === true) {
-        document.location = "././404/cydia.html";
+        document.location = "https://mwoolweaver.us/404/cydia.html";
       } else {
-        document.location = "././404/desktop.html";
+        document.location = "https://mwoolweaver.us/404/desktop.html";
       }
     } else {
-      document.location = "././404/desktop.html";
+      document.location = "https://mwoolweaver.us/404/desktop.html";
     }
   </script>
 </body>
