--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   <script>
     if (WURFL.is_mobile === true) {
       if (iOS() === true) {
-        document.location = "./cydia.html";
+        document.location = "https://mwoolweaver.us/cydia.html";
       } else {
-        document.location = "./desktop.html";
+        document.location = "https://mwoolweaver.us/desktop.html";
       }
     } else {
-      document.location = "./desktop.html";
+      document.location = "https://mwoolweaver.us/desktop.html";
     }
   </script>
 </body>
