--- a/404/cydia.html
+++ b/404/cydia.html
@@ -12,6 +12,22 @@
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-86995396-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 
 <body class="pinstripe">
