--- a/404/desktop.html
+++ b/404/desktop.html
@@ -15,6 +15,22 @@
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
 
   <title> 404 Not Found </title>
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-86995396-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 
 <body>
@@ -28,25 +44,20 @@
         <hr>
       </div>
 
-      <h3> 404 Not Found </h3>
-
-      The page you are looking for doesn't exist.
+      <h3> 404 Not Found </h3> The page you are looking for doesn't exist.
 
 
       <hr>
 
-      <h3> Where did Anemone-Fonts go? </h3>
-
-      If you are looking for The Anemone-Fonts repo it has been moved.
-      <br>
-      Location: <a href="https://anemone-fonts.us/" style="text-decoration: none"> https://anemone-fonts.us/
+      <h3> Where did Anemone-Fonts go? </h3> If you are looking for The Anemone-Fonts repo it has been moved.
+      <br> Location: <a href="https://anemone-fonts.us/" style="text-decoration: none"> https://anemone-fonts.us/
 
       <div id="title">
         <hr>
         <span class="credits left"> Twitter <br> <a href="https://twitter.com/mwoolweaver" style="text-decoration: none"> <br>@mwoolweaver</a> </span>
-      </div>
+  </div>
 
-    </section>
+  </section>
   </div>
 </body>
 
