--- a/Public-Repo/cydia.html
+++ b/Public-Repo/cydia.html
@@ -7,6 +7,16 @@
       font-family: 'BeatsByDre';
     }
   </style>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-86995396-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   <title> Michael's Public Repository </title>
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/cydia.css" />
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
