--- a/cydia.html
+++ b/cydia.html
@@ -12,22 +12,6 @@
   <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
-  <script>
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-86995396-1', 'auto');
-    ga('send', 'pageview');
-  </script>
 </head>
 
 <body class="pinstripe">
@@ -37,8 +21,8 @@
       <div>
         <p>
           Cydia Repos ⌐■_■
-          <br><br> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://mwoolweaver.us/Public-Repo/" style="text-decoration: none">https://mwoolweaver.us/Public-Repo/</a> to Cydia
-          <br><br> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Anemone-Fonts.us/" style="text-decoration: none">https://Anemone-Fonts.us/</a> to Cydia
+          <br><br> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.mwoolweaver.us/" style="text-decoration: none">https://repo.mwoolweaver.us/</a> to Cydia
+          <br><br> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/" style="text-decoration: none">https://anemone-fonts.mwoolweaver.us/</a> to Cydia
         </p>
       </div>
     </fieldset>
@@ -69,7 +53,7 @@
     <label> Links </label>
     <fieldset>
       <a href="https://twitter.com/mwoolweaver">
-              <img class="icon" src="./img/twitter.png" width="58" height="58">
+              <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
               <div><div><label><p>
                     @mwoolweaver on Twitter
               </p></label></div></div>
@@ -77,7 +61,7 @@
     </fieldset>
     <fieldset>
       <a href="https://twitter.com/AnemoneFonts">
-              <img class="icon" src="./img/twitter.png" width="58" height="58">
+              <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
               <div><div><label><p>
                     @AnemoneFonts on Twitter
               </p></label></div></div>
