--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -11,5 +11,5 @@
 
 </script>
 
- beta stuuf is <a href="https://mwoolweaver.us/stuuf/-dev-beta" style="text-decoration: none"> here </a>
+ beta stuuf is <a href="https://mwoolweaver.us/stuuf/-dev-beta/" style="text-decoration: none"> here </a>
 </html>
