--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -1,8 +1,60 @@
 <!DOCTYPE html>
 <html>
-  
-  <a href="https://mwoolweaver.us/stuuf/-dev-beta/" style="text-decoration: none">  beta stuuf </a>
-  <br><br>
-  <a href="https://mwoolweaver.us/stuuf/lib.zip" style="text-decoration: none"> lib.zip </a>
-  
+
+<head>
+  <style>
+    body {
+      font-family: 'BeatsByDre';
+    }
+  </style>
+  <title> Some Stuuf </title>
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/cydia.css" />
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
+</head>
+
+<body class="pinstripe">
+  <panel>
+    <label><a href="https://mwoolweaver.us/stuuf" style="text-decoration: none"> Some Stuuf </a></label>
+    <br>
+    <fieldset>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/" style="text-decoration: none">  Dev Betas </a>
+        </p>
+      </div>
+    </fieldset>
+    
+    <fieldset>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/lib.zip" style="text-decoration: none"> lib.zip </a>
+        </p>
+      </div>
+    </fieldset>
+    
+    <fieldset>
+      <div>
+        <p>
+          <a href="https://mwoolweaver.us/stuuf/XFINITY.mobileconfig" style="text-decoration: none"> XFINITY.mobileconfig </a>
+        </p>
+      </div>
+    </fieldset>
+
+
+    <label> Links </label>
+    <fieldset>
+      <a href="https://twitter.com/mwoolweaver">
+              <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
+              <div><div><label><p>
+                    @mwoolweaver on Twitter
+              </p></label></div></div>
+            </a>
+    </fieldset>
+  </panel>
+
+</body>
+
 </html>
+
