--- a/stuuf/index.html
+++ b/stuuf/index.html
@@ -29,7 +29,7 @@
     <fieldset>
       <div>
         <p>
-          <a href="https://mwoolweaver.us/stuuf/lib.zip" style="text-decoration: none"> lib.zip </a> (can help after "Erase All Content & Settings" on semi-untethered jailbreaks)
+          <a href="https://mwoolweaver.us/stuuf/lib.zip" style="text-decoration: none"> lib.zip </a> <br> (can help after "Erase All Content & Settings" on semi-untethered jailbreaks)
         </p>
       </div>
     </fieldset>
