--- a/stuuf/-dev-beta/index.html
+++ b/stuuf/-dev-beta/index.html
@@ -17,7 +17,7 @@
 <body class="pinstripe">
   <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/" style="text-decoration: none">  Dev Betas </a></label>
   <panel>
-    <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/iOS/" style="text-decoration: none"> iOS </a></label>
+    <h4><a href="https://mwoolweaver.us/stuuf/-dev-beta/iOS/" style="text-decoration: none"> iOS </a></h4>
     <fieldset>
       <div>
         <p>
