--- a/stuuf/-dev-beta/index.html
+++ b/stuuf/-dev-beta/index.html
@@ -16,6 +16,7 @@
 
 <body class="pinstripe">
   <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/" style="text-decoration: none">  Dev Betas </a></label>
+  <br><br><br>
   <panel>
     <h4><a href="https://mwoolweaver.us/stuuf/-dev-beta/iOS/" style="text-decoration: none"> iOS </a></h4>
     <fieldset>
@@ -31,7 +32,7 @@
       </div>
     </fieldset>
     
-    <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/macOS/" style="text-decoration: none"> macOS </a></label>
+    <h4><a href="https://mwoolweaver.us/stuuf/-dev-beta/macOS/" style="text-decoration: none"> macOS </a></h4>
     <fieldset>
       <div>
         <p>
@@ -45,7 +46,7 @@
       </div>
     </fieldset>
     
-    <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/watchOS/" style="text-decoration: none"> watchOS </a></label>
+    <h4><a href="https://mwoolweaver.us/stuuf/-dev-beta/watchOS/" style="text-decoration: none"> watchOS </a></h4>
     <fieldset>
       <div>
         <p>
@@ -59,7 +60,7 @@
       </div>
     </fieldset>
 
-    <label><a href="https://mwoolweaver.us/stuuf/-dev-beta/tvOS/" style="text-decoration: none"> tvOS </a></label>
+    <h4><a href="https://mwoolweaver.us/stuuf/-dev-beta/tvOS/" style="text-decoration: none"> tvOS </a></h4>
     <fieldset>
       <div>
         <p>
