--- a/stuuf/-dev-beta/index.html
+++ b/stuuf/-dev-beta/index.html
@@ -75,7 +75,7 @@
     </fieldset>
 
 
-    <label> Links </label>
+    <h4> Links </h4>
     <fieldset>
       <a href="https://twitter.com/mwoolweaver">
               <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
