--- a/index.html
+++ b/index.html
@@ -1,44 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <script type="text/javascript" src="https://wurfl.io/wurfl.js"></script>
-  <script>
-    function iOS() {
-
-      var iDevices = [
-        'iPad Simulator',
-        'iPhone Simulator',
-        'iPod Simulator',
-        'iPad',
-        'iPhone',
-        'iPod'
-      ];
-
-      if (!!navigator.platform) {
-        while (iDevices.length) {
-          if (navigator.platform === iDevices.pop()) {
-            return true;
-          }
-        }
-      }
-      return false;
+  <style>
+    body {
+      font-family: 'BeatsByDre';
     }
-  </script>
+  </style>
+  <title> A Collection of Things </title>
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/cydia.css" />
+  <link rel="stylesheet" type="text/css" href="https://mwoolweaver.us/css/fonts.css" />
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <script type="text/javascript" src="https://mwoolweaver.us/js/cydia.js"></script>
 </head>
 
-<body>
-  <script>
-    if (WURFL.is_mobile === true) {
-      if (iOS() === true) {
-        document.location = "https://mwoolweaver.us/cydia.html";
-      } else {
-        document.location = "https://mwoolweaver.us/desktop.html";
-      }
-    } else {
-      document.location = "https://mwoolweaver.us/desktop.html";
-    }
-  </script>
+<body class="pinstripe">
+  <panel>
+    <label><a href="https://mwoolweaver.us" style="text-decoration: none"> A Collection of Things </a></label>
+    <fieldset>
+      <div>
+        <p>
+          Cydia Repos ⌐■_■
+          <br><br> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.mwoolweaver.us/" style="text-decoration: none">https://repo.mwoolweaver.us/</a> to Cydia
+          <br><br> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/" style="text-decoration: none">https://anemone-fonts.mwoolweaver.us/</a> to Cydia
+        </p>
+      </div>
+    </fieldset>
+    <br>
+    <fieldset>
+      <div>
+        <p>
+          iOS Kernel Stuff <a href="https://ioshackerwiki.com/" style="text-decoration: none"> ⌐■_■ </a>
+          <br><br>
+          <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" style="text-decoration: none"> Decrypted iOS 10 Kernels </a>
+          <br><br>
+          <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" style="text-decoration: none"> Disassembled iOS 10 Kernels </a>
+        </p>
+      </div>
+    </fieldset>
+    <br>
+    <fieldset>
+      <div>
+        <p>
+          Beta Stuuf <a href="./stuuf/index.html" style="text-decoration: none"> ⌐■_■ </a>
+          <br><br>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta" style="text-decoration: none">  Dev Betas </a>
+        </p>
+      </div>
+    </fieldset>
+
+
+    <label> Links </label>
+    <fieldset>
+      <a href="https://twitter.com/mwoolweaver">
+              <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
+              <div><div><label><p>
+                    @mwoolweaver on Twitter
+              </p></label></div></div>
+            </a>
+    </fieldset>
+    <fieldset>
+      <a href="https://twitter.com/AnemoneFonts">
+              <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
+              <div><div><label><p>
+                    @AnemoneFonts on Twitter
+              </p></label></div></div>
+            </a>
+    </fieldset>
+  </panel>
+
 </body>
 
 </html>
