change looks a little

--- a/index.html
+++ b/index.html
@@ -15,36 +15,53 @@
 </head>
 
 <body class="pinstripe">
+  <label><a href="https://mwoolweaver.us" style="text-decoration: none"> A Collection of Things </a></label>
   <panel>
-    <label><a href="https://mwoolweaver.us" style="text-decoration: none"> A Collection of Things </a></label>
+    <label> Cydia Repos ⌐■_■ </label>
     <fieldset>
       <div>
         <p>
-          Cydia Repos ⌐■_■
-          <br><br> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.mwoolweaver.us/" style="text-decoration: none">https://repo.mwoolweaver.us/</a> to Cydia
-          <br><br> Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/" style="text-decoration: none">https://anemone-fonts.mwoolweaver.us/</a> to Cydia
+          <a href="https://repo.mwoolweaver.us/"> repo.mwoolweaver.us/ </a>
+        </p>
+      </div>
+      <div>
+        <p>
+          Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.mwoolweaver.us/" style="text-decoration: none">https://repo.mwoolweaver.us/</a> to Cydia
+        </p>
+      </div>
+      <div>
+        <p>
+          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/">  anemone-fonts.mwoolweaver.us/ </a>
+        </p>
+      </div>
+      <div>
+        <p>
+          Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/" style="text-decoration: none">https://anemone-fonts.mwoolweaver.us/</a> to Cydia
         </p>
       </div>
     </fieldset>
     <br>
+
+    <label> iOS Kernel Stuff ⌐■_■ </label>
     <fieldset>
       <div>
         <p>
-          iOS Kernel Stuff <a href="https://ioshackerwiki.com/" style="text-decoration: none"> ⌐■_■ </a>
-          <br><br>
           <a href="https://github.com/iOS-10-Stuffs/Decrypted-Kernels" style="text-decoration: none"> Decrypted iOS 10 Kernels </a>
-          <br><br>
+        </p>
+      </div>
+      <div>
+        <p>
           <a href="https://github.com/iOS-10-Stuffs/Disassembled-Kernels" style="text-decoration: none"> Disassembled iOS 10 Kernels </a>
         </p>
       </div>
     </fieldset>
     <br>
+
+    <label> Stuuf ⌐■_■ </label>
     <fieldset>
       <div>
         <p>
-          Beta Stuuf <a href="./stuuf/index.html" style="text-decoration: none"> ⌐■_■ </a>
-          <br><br>
-          <a href="https://mwoolweaver.us/stuuf/-dev-beta" style="text-decoration: none">  Dev Betas </a>
+          <a href="https://mwoolweaver.us/stuuf/-dev-beta/" style="text-decoration: none">  Dev Betas </a>
         </p>
       </div>
     </fieldset>
