--- a/index.html
+++ b/index.html
@@ -15,34 +15,32 @@
 </head>
 
 <body class="pinstripe">
-  <label><a href="https://mwoolweaver.us" style="text-decoration: none"> A Collection of Things </a></label>
+  <br>
+  <h4><a href="https://mwoolweaver.us" style="text-decoration: none"> A Collection of Things </a></h4>
+  <br><br>
   <panel>
-    <label> Cydia Repos ⌐■_■ </label>
+    <h4> Cydia Repos ⌐■_■ </h4>
     <fieldset>
       <div>
         <p>
           <a href="https://repo.mwoolweaver.us/"> repo.mwoolweaver.us/ </a>
         </p>
-      </div>
-      <div>
         <p>
-          Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.mwoolweaver.us/" style="text-decoration: none">https://repo.mwoolweaver.us/</a> to Cydia
+          Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://repo.mwoolweaver.us/" style="text-decoration: none"> repo.mwoolweaver.us/</a> to Cydia
         </p>
       </div>
       <div>
         <p>
           <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/">  anemone-fonts.mwoolweaver.us/ </a>
         </p>
-      </div>
-      <div>
         <p>
-          Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/" style="text-decoration: none">https://anemone-fonts.mwoolweaver.us/</a> to Cydia
+          Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/" style="text-decoration: none">anemone-fonts.mwoolweaver.us/</a> to Cydia
         </p>
       </div>
     </fieldset>
     <br>
 
-    <label> iOS Kernel Stuff ⌐■_■ </label>
+    <h4> iOS Kernel Stuff ⌐■_■ </h4>
     <fieldset>
       <div>
         <p>
@@ -57,7 +55,7 @@
     </fieldset>
     <br>
 
-    <label> Stuuf ⌐■_■ </label>
+    <h4> Stuuf ⌐■_■ </h4>
     <fieldset>
       <div>
         <p>
@@ -65,9 +63,9 @@
         </p>
       </div>
     </fieldset>
+    <br>
 
-
-    <label> Links </label>
+    <h4> Links </h4>
     <fieldset>
       <a href="https://twitter.com/mwoolweaver">
               <img class="icon" src="https://mwoolweaver.us/img/twitter.png" width="58" height="58">
