--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="pinstripe">
   <br>
   <h4><a href="https://mwoolweaver.us" style="text-decoration: none"> A Collection of Things </a></h4>
-  <br><br>
+  <br>
   <panel>
     <h4> Cydia Repos ⌐■_■ </h4>
     <fieldset>
@@ -59,7 +59,7 @@
     <fieldset>
       <div>
         <p>
-          <a href="https://mwoolweaver.us/stuuf/-dev-beta/" style="text-decoration: none">  Dev Betas </a>
+          <a href="https://mwoolweaver.us/stuuf/" style="text-decoration: none"> Stuuf </a>
         </p>
       </div>
     </fieldset>
