--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div>
         <p>
-          <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/">  anemone-fonts.mwoolweaver.us/ </a>
+          <a href="https://anemone-fonts.mwoolweaver.us/">  anemone-fonts.mwoolweaver.us/ </a>
         </p>
         <p>
           Add <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://anemone-fonts.mwoolweaver.us/" style="text-decoration: none">anemone-fonts.mwoolweaver.us/</a> to Cydia
