--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body class="pinstripe">
   <br>
-  <h4><a href="https://mwoolweaver.us" style="text-decoration: none"> A Collection of Things </a></h4>
+  <center><h4><a href="https://mwoolweaver.us" style="text-decoration: none"> A Collection of Things </a></h4></center>
   <br>
   <panel>
-    <h4> Cydia Repos ⌐■_■ </h4>
+    <center><h4> Cydia Repos ⌐■_■ </h4></center>
     <fieldset>
       <div>
         <p>
@@ -40,7 +40,7 @@
     </fieldset>
     <br>
 
-    <h4> iOS Kernel Stuff ⌐■_■ </h4>
+    <center><h4> iOS Kernel Stuff ⌐■_■ </h4></center>
     <fieldset>
       <div>
         <p>
@@ -55,7 +55,7 @@
     </fieldset>
     <br>
 
-    <h4> Stuuf ⌐■_■ </h4>
+    <center><h4> Stuuf ⌐■_■ </h4></center>
     <fieldset>
       <div>
         <p>
