--- a/stuuf/resume/index.html
+++ b/stuuf/resume/index.html
@@ -1,3 +1,3 @@
 <html>
-   <embed src="./Michael_Woolweaver_04-2019.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+   <embed src="./Michael_Woolweaver_04-2019.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 </html>
