--- a/resume/index.html
+++ b/resume/index.html
@@ -2,5 +2,5 @@
    <!--- <embed src="./Michael_Woolweaver_04-2019.pdf" width="" height=""  alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 -->
 
-   <iframe src="Michael_Woolweaver_04-2019.pdf" width="" height="" border="0"></iframe>
+   <iframe width=100% height=100% src="Michael_Woolweaver_04-2019.pdf" frameborder="0" allowfullscreen scrolling="no"> </iframe>
 </html>
