image-bg.jpg change

--- a/404.html
+++ b/404.html
@@ -2,6 +2,6 @@
 layout: error
 title: 404
 ---
-## Why have you learned today?
+## What have you learned today?
 
 <iframe src="https://giphy.com/embed/tANpI4H9zlv1u" width="480" height="334" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
