--- a/about.html
+++ b/about.html
@@ -8,5 +8,5 @@ title: About
 
 
 <a href=" " target="_blank">  </a>.
-
-<small> </small>
+Just a guy in Texas playing with technology, learning something along the way and sharing it with others.
+<small>  </small>
