--- a/beta/index.html
+++ b/beta/index.html
@@ -2,30 +2,31 @@
 <html>
 <body>
 
-<h2>Basic HTML Table</h2>
+<h2>Apple OS dev beta</h2>
 
 <table style="width:100%">
   <tr>
-    <th>OS dev beta</th>
-    <th>Link</th>
+    <th></th>
   </tr>
   <tr>
-    <td>iOS 14 </td>
-    <td> </td>
+    <td> <a href="https://michael.woolweaver.bid/iOS_14_Beta_Profile.mobileconfig"> iOS 14 </a> </td> 
   </tr>
   <tr>
-    <td>iPadOS 14</td>
-    <td> </td>
+    <td> <a href="https://michael.woolweaver.bid/iOS_iPadOS_14_Beta_Profile.mobileconfig"> iPadOS 14 </a> </td>
   </tr>
   <tr>
-    <td>watchOS 7</td>
-    <td> </td>
+    <td> <a href="https://michael.woolweaver.bid/watchOS_7_Beta_Profilemobileconfig.mobileconfig"> watchOS 7 </a> </td>
   </tr>
   <tr>
-  	<td> tvOS 14</td>
-    <td> </td>
+  	<td> <a href="https://michael.woolweaver.bid/tvOS_14_Beta_Profile.mobileconfig"> tvOS 14 </a> </td>
+  </tr>
+  <tr>
+  	<td> <a href="https://michael.woolweaver.bid/macOSDeveloperBetaAccessUtility.dmg"> macOS Big Sur </a> </td>
   </tr>
 </table>
 
 </body>
 </html>
+
+
+
