--- a/beta/index.html
+++ b/beta/index.html
@@ -9,19 +9,19 @@
     <th></th>
   </tr>
   <tr>
-    <td> <a href="https://michael.woolweaver.bid/iOS_14_Beta_Profile.mobileconfig"> iOS 14 </a> </td> 
+    <td> <a href="https://michael.woolweaver.bid/beta/iOS_14_Beta_Profile.mobileconfig"> iOS 14 </a> </td> 
   </tr>
   <tr>
-    <td> <a href="https://michael.woolweaver.bid/iOS_iPadOS_14_Beta_Profile.mobileconfig"> iPadOS 14 </a> </td>
+    <td> <a href="https://michael.woolweaver.bid/beta/iOS_iPadOS_14_Beta_Profile.mobileconfig"> iPadOS 14 </a> </td>
   </tr>
   <tr>
-    <td> <a href="https://michael.woolweaver.bid/watchOS_7_Beta_Profilemobileconfig.mobileconfig"> watchOS 7 </a> </td>
+    <td> <a href="https://michael.woolweaver.bid/beta/watchOS_7_Beta_Profilemobileconfig.mobileconfig"> watchOS 7 </a> </td>
   </tr>
   <tr>
-  	<td> <a href="https://michael.woolweaver.bid/tvOS_14_Beta_Profile.mobileconfig"> tvOS 14 </a> </td>
+  	<td> <a href="https://michael.woolweaver.bid/beta/tvOS_14_Beta_Profile.mobileconfig"> tvOS 14 </a> </td>
   </tr>
   <tr>
-  	<td> <a href="https://michael.woolweaver.bid/macOSDeveloperBetaAccessUtility.dmg"> macOS Big Sur </a> </td>
+  	<td> <a href="https://michael.woolweaver.bid/beta/macOSDeveloperBetaAccessUtility.dmg"> macOS Big Sur </a> </td>
   </tr>
 </table>
 
