--- a/beta/index.html
+++ b/beta/index.html
@@ -21,7 +21,7 @@
   	<td> <a href="https://michael.woolweaver.bid/beta/tvOS_14_Beta_Profile.mobileconfig"> tvOS 14 </a> </td>
   </tr>
   <tr>
-  	<td> <a href="https://michael.woolweaver.bid/beta/macOSDeveloperBetaAccessUtility.dmg"> macOS Big Sur </a> </td>
+  	<td> <a href="https://michael.woolweaver.bid/beta/macOSDeveloperBetaAccessUtility.dmg"> macOS 11 </a> </td>
   </tr>
 </table>
 
