--- a/beta/index.html
+++ b/beta/index.html
@@ -5,7 +5,7 @@
 
 <h2>  dev beta</h2>
 
-<table style="width:100%">
+<table>
   <tr>
     <td> <a href="https://michael.woolweaver.bid/iOS_14_Beta_Profile.mobileconfig"> iOS 14 </a> </td> 
   </tr>
