--- a/beta/index.html
+++ b/beta/index.html
@@ -21,6 +21,8 @@
   <tr>
   	<td> <a href="https://michael.woolweaver.bid/macOSDeveloperBetaAccessUtility.dmg"> macOS 11 </a> </td>
   </tr>
+  <tr>
+    <td> <a href="https://michael.woolweaver.bid/beta/All_Beta_Profiles.zip"> All_Beta_Profiles.zip </a> </td>
 </table>
 
 </body>
