--- a/beta/index.html
+++ b/beta/index.html
@@ -22,7 +22,7 @@
   	<td> <a href="https://michael.woolweaver.bid/macOSDeveloperBetaAccessUtility.dmg"> macOS 11 </a> </td>
   </tr>
   <tr>
-    <td> <a href="https://michael.woolweaver.bid/beta/All_Beta_Profiles.zip"> All_Beta_Profiles.zip </a> </td>
+    <td> <a href="https://michael.woolweaver.bid/beta/All.zip"> All.zip </a> </td>
 </table>
 
 </body>
